# hello_actix_web

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.sqlx/: query-295dd7127391245297bc2a4984da16af4145bc1bbbc7d3a48712bf7b20a2c6b6.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20260305074027_make_status_not_null_in_subscriptions.sql  20260305074747_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  constants.rs  domain.rs  email_client.rs  helper.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  persisted_data.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helper.rs  main.rs  subscriptions.rs  subscriptions_confirm.rs
