[package]
name = "hello"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "hello"

[dependencies]
actix-web = "4"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = "0.15"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "migrate"]

[dev-dependencies]
reqwest = "0.12.23"
