[package]
name = "hello_actix_web"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "hello_actix_web"

[dependencies]
actix-web = "4"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = "0.15"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-actix-web = "0.7"
secrecy = { version = "0.10", features = ["serde"] }

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
reqwest = "0.12.23"
once_cell = "1"
