[package]
name = "hello_actix_web"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "hello_actix_web"

[dependencies]
actix-web = "4"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = "0.15"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-actix-web = "0.7"
secrecy = { version = "0.10", features = ["serde"] }
unicode-segmentation = "1"
validator = "0.20"
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "rustls",
] }
rand = { version = "0.10", features = ["std_rng"] }
thiserror = "2"
anyhow = "1"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
once_cell = "1"
claim = "0.5"
fake = "5"
wiremock = "0.6"
serde_json = "1"
linkify = "0.10"
